--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "firebase-admin": "^9.1.1",
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
